# pinwheel_solver

./: .gitignore  CMakeLists.txt  README.md
apps/: covering_solver.cpp  packing_solver.cpp  verify_covering_lemma.cpp  verify_packing_lemma.cpp  verify_unfold_lemma.cpp
include/pinwheel/: policies.hpp  solver.hpp  solver_cli.hpp  types.hpp
